# bdfinance

./: .gitignore  README.md  main.py  pyproject.toml
bdfinance/: __init__.py  cache.py  client.py  config.py  constants.py  http_client.py  parsers.py  ticker.py
bdfinance/models/: __init__.py  company.py  market.py  news.py  trading.py
bdfinance/repositories/: __init__.py  base.py  market.py  news.py  trading.py
bdfinance/utils/: __init__.py  common.py  data_cleaners.py  date_helper.py  parse_com_info.py
docs/: caching.md  client.md  configuration.md  models.md  repositories.md  utilities.md
tests/: conftest.py  test_company_models.py  test_market.py  test_news.py  test_parsers.py  test_trading.py
