[project]
name = "bdfinance"
version = "0.3.0"
description = "High-performance async Bangladesh stock market data library with batch processing"
readme = "README.md"
requires-python = ">=3.12"

keywords = [
    "bangladesh stock market",
    "dse",
    "bangladesh finance",
]

classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]



dependencies = [
    "httpx[http2]",
    "beautifulsoup4",
    "lxml",
    "pandas",
    "pydantic",
    "pydantic-settings",
    "tenacity",
    "structlog",
    "aiocache",
    "msgpack",
    "thefuzz>=0.22.1",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
]


[project.urls]
Homepage = "https://github.com/shhossain/bdfinance"
Repository = "https://github.com/shhossain/bdfinance"
